# smytten_value_for_money

./: README.md  app.py  pyproject.toml  requirements.txt  smytten_products.csv
data/: download_products.py
