[project]
name = "smytten-value-for-money"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "selenium>=4.28.1",
    "stqdm>=0.0.5",
    "streamlit>=1.42.0",
]
